cli: fix race condition when running nmcli in parallel

Connection profile is not modified correctly when nmcli is run in parallel.
This issue was fixed by mutually exclusivening nmcli with file lock.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/611